--- a/docs/reference-guide/modules/migration/pages/paths/index.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/index.adoc
@@ -10,13 +10,16 @@ Whether you are performing a straightforward version bump or a deep architectura
 * Import and Package Changes
 * Module Restructuring
 2. **Specific Migration Paths**
+* xref:migration:paths/aggregates/index.adoc[Aggregate Migration]
+* xref:migration:paths/messages.adoc[Message Migration (@Event, @Command, @Query)]
+* _Event Processor configuration in Axon Framework 5 (Coming soon)_
 * xref:migration:paths/messages.adoc[Message changes (@Event, @Command, @Query)]
 * _Aggregate to Entity (Coming soon)_
 * _Event Processor configuration in AF5 (Coming soon)_
 * _Test fixtures (Coming soon)_
 * _Serializer to Converter configuration changes (Coming soon)_
 * _ConfigurerModule to ConfigurationEnhancers (Coming soon)_
-* _Message Interceptors in AF5 (Coming soon)_
+* _Message Interceptors in Axon Framework 5 (Coming soon)_
 3. **What is not yet there**
 4. **Missing a Migration Path?**
 
@@ -24,6 +27,7 @@ Whether you are performing a straightforward version bump or a deep architectura
 
 Every user migrating from Axon Framework 4.x to 5.x will encounter a set of base changes. These primarily involve package renames and module restructurings.
 
+[#import-and-package-changes]
 === Import and package changes
 
 Many classes have been moved to better align with the new modular structure. The most notable change is the move of Spring-specific and monitoring components into their own extension namespaces, and the nesting of core messaging components under the `org.axonframework.messaging` package.
@@ -172,7 +176,7 @@ to
 |===
 ====
 
-For an exhaustive list of all class-level renames and moves, please refer to the `api-changes.md` file in the root of the Axon Framework repository.
+For an exhaustive list of all class-level renames and moves, please refer to the https://github.com/AxonFramework/AxonFramework/blob/main/axon-5/api-changes.md[`api-changes.md`] file in the root of the Axon Framework repository.
 
 === Module restructuring
 
@@ -279,6 +283,7 @@ As Axon Framework 5.0 is the first step in this new major version, not all featu
 
 If your application relies heavily on these features, we recommend checking the release notes for future 5.x versions or contacting us for guidance.
 
+[#missing-a-migration-path]
 == Missing a migration path?
 
 We aim to cover the most common migration scenarios in the following subsections. However, every application is unique.
