(#4155) Refactor sequencing policies
This commit consolidates sequence policy specification and implementation for both event and command sequencing into the `org.axonframework.messaging.core.sequencing` package to unify the API and allow reuse of existing policies for different message types.

* moved all existing sequencing policies from `.commandhandling.sequencing` and `.eventhandling.sequencing` to `.core.sequencing`
* consolidated the `.eventhandling.sequencing.SequencingPolicy` and `CommandSequencingPolicy` to the generic `.core.sequencing.SequencingPolicy` interface
* introduce config exception for message type specific policies (`SequentialPerAggregatePolicy`, `RoutingKeySequencingPolicy`
* adjust converter retrieval in the `ExtractionSequencingPolicy` based on the Message type

--- a/docs/reference-guide/modules/events/pages/event-processors/streaming.adoc
+++ b/docs/reference-guide/modules/events/pages/event-processors/streaming.adoc
@@ -937,8 +937,8 @@ Hence, for the `PropertySequencingPolicy`, you are able to omit the first parame
 [source,java]
 ----
 import org.axonframework.messaging.eventhandling.annotation.EventHandler;
-import org.axonframework.messaging.eventhandling.annotation.SequencingPolicy;
-import org.axonframework.messaging.eventhandling.sequencing.PropertySequencingPolicy;
+import org.axonframework.messaging.core.annotation.SequencingPolicy;
+import org.axonframework.messaging.core.sequencing.PropertySequencingPolicy;
 
 @SequencingPolicy(type = PropertySequencingPolicy.class, parameters = {"studentId"})
 class CustomEventHandlingComponent {
@@ -970,8 +970,8 @@ Thus, if you have an Event Handling Component with a `@SequencingPolicy` on the 
 [source,java]
 ----
 import org.axonframework.messaging.eventhandling.annotation.EventHandler;
-import org.axonframework.messaging.eventhandling.annotation.SequencingPolicy;
-import org.axonframework.messaging.eventhandling.sequencing.PropertySequencingPolicy;
+import org.axonframework.messaging.core.annotation.SequencingPolicy;
+import org.axonframework.messaging.core.sequencing.PropertySequencingPolicy;
 
 @SequencingPolicy(type = PropertySequencingPolicy.class, parameters = {"studentId"})
 class CustomEventHandlingComponent {
@@ -1002,7 +1002,7 @@ import org.axonframework.messaging.eventhandling.EventHandlingComponent;
 import org.axonframework.messaging.eventhandling.SimpleEventHandlingComponent;
 import org.axonframework.messaging.eventhandling.configuration.EventHandlingComponentsConfigurer;
 import org.axonframework.messaging.eventhandling.processing.streaming.pooled.PooledStreamingEventProcessorsConfigurer;
-import org.axonframework.messaging.eventhandling.sequencing.PropertySequencingPolicy;
+import org.axonframework.messaging.core.sequencing.PropertySequencingPolicy;
 
 public class AxonConfig {
 
