Updated reference guide with DistributedQueryBusConfiguration changes

--- a/docs/reference-guide/modules/queries/pages/infrastructure.adoc
+++ b/docs/reference-guide/modules/queries/pages/infrastructure.adoc
@@ -42,11 +42,97 @@ The `DistributedQueryBus` combined with the `AxonServerQueryBusConnector` provid
 * *Load balancing*: When the same application is deployed across multiple instances, Axon Server can distribute queries among those instances
 * *Subscription query support*: Full support for subscription queries with update distribution across nodes
 * *Query prioritization*: Support for query priority to ensure critical queries are processed first
+* *Local handler shortcut*: When enabled (default), queries for which a local handler is registered are executed locally without going through the connector, improving performance by avoiding network overhead
 
 [NOTE]
 ====
 Other `QueryBusConnector` implementations will follow in the future. Through those, distributing query messages without Axon Server will become a possibility.
 ====
+
+==== Configuring the distributed query bus
+
+The `DistributedQueryBus` can be configured using the `DistributedQueryBusConfiguration` class, which provides a fluent API for customizing query processing behavior.
+
+Available configuration options:
+
+* *Query threads*: Number of threads used for query processing (default: 10)
+* *Query queue capacity*: Capacity of the priority queue for query processing tasks (default: 1000)
+* *Custom executor service*: Provide a custom `ExecutorService` for query processing
+* *Local query handler preference*: Enable or disable the local handler shortcut (default: enabled)
+
+The local handler shortcut, when enabled, allows the distributed query bus to use local query handlers directly when available, bypassing remote dispatch. This improves performance by avoiding network overhead when a handler is available locally. Only when no local handler is available will the query be dispatched remotely through the connector.
+
+===== Configuration examples
+
+[tabs]
+====
+Configuration API::
++
+--
+Customize the distributed query bus configuration:
+
+[source,java]
+----
+import org.axonframework.messaging.core.configuration.MessagingConfigurer;
+import org.axonframework.messaging.queryhandling.distributed.DistributedQueryBusConfiguration;
+
+public class AxonConfig {
+    public void configureQueryBus(MessagingConfigurer configurer) {
+        // Customize the configuration
+        DistributedQueryBusConfiguration config = new DistributedQueryBusConfiguration()
+                .queryThreads(20)                        // Set number of query processing threads
+                .queryQueueCapacity(2000)                // Set queue capacity
+                .preferLocalQueryHandler(true);         // Enable local handler shortcut (default)
+
+        // Register the custom configuration
+        configurer.registerComponent(DistributedQueryBusConfiguration.class, c -> config);
+    }
+}
+----
+
+To disable the local handler shortcut:
+
+[source,java]
+----
+DistributedQueryBusConfiguration config = new DistributedQueryBusConfiguration()
+        .preferLocalQueryHandler(false);  // Force all queries through connector
+----
+--
+
+Spring Boot::
++
+--
+When using Spring Boot with Axon Server, configure the query bus through application properties:
+
+[source,properties]
+----
+# Configure query processing threads
+axon.axonserver.query-threads=20
+
+# Or configure programmatically
+----
+
+[source,java]
+----
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.axonframework.messaging.queryhandling.distributed.DistributedQueryBusConfiguration;
+
+@Configuration
+public class AxonConfig {
+
+    @Bean
+    public DistributedQueryBusConfiguration queryBusConfiguration() {
+        return new DistributedQueryBusConfiguration()
+                .queryThreads(20)
+                .preferLocalQueryHandler(true);
+    }
+}
+----
+--
+====
+
+===== Default configuration
 
 [tabs]
 ====
