Introduce the Test Fixture migration path
Introduce the Test Fixture migration path. Have this page explain the
new way to setup a test, what the given, when, and then phase look like,
 as well as some chaining and matcher options. Place some notes on
 missing methods and beneficial details throughout.

#4085

--- a/docs/reference-guide/modules/testing/pages/basic-testing.adoc
+++ b/docs/reference-guide/modules/testing/pages/basic-testing.adoc
@@ -50,6 +50,7 @@ class AccountTest {
 
 IMPORTANT: Always call `fixture.stop()` in your `@AfterEach` method to properly release resources.
 
+[#fixture_customization]
 === Fixture with customization
 
 You can customize the fixture using the `AxonTestFixture#with(ApplicationConfigurer, UnaryOperator<Customization>)` method:
