--- a/docs/reference-guide/modules/migration/pages/paths/index.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/index.adoc
@@ -14,7 +14,7 @@ Whether you are performing a straightforward version bump or a deep architectura
 * xref:migration:paths/aggregates/index.adoc[Aggregate Migration]
 * xref:migration:paths/event-store.adoc[Event Store migration]
 * _Event Processor configuration in Axon Framework 5 (Coming soon)_
-* _Test fixtures (Coming soon)_
+* xref:migration:paths/test-fixtures.adoc[Test Fixture migration]
 * _Serializer to Converter configuration changes (Coming soon)_
 * _ConfigurerModule to ConfigurationEnhancers (Coming soon)_
 * _Message Interceptors in Axon Framework 5 (Coming soon)_
